start to change c to c++

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Dependencies/ioLibrary_Driver"]
 	path = Dependencies/ioLibrary_Driver
 	url = https://github.com/Wiznet/ioLibrary_Driver.git
+[submodule "Dependencies/Eni"]
+	path = Dependencies/Eni
+	url = https://github.com/vlad230596/Eni.git
